src/objects/G2OPlanning_Sprint__c.object
<CustomObject>
    <fields>
        <fullName>Focus_Areas__c</fullName>
        <label>Focus Areas</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PUCs__c</fullName>
        <label>PUC&apos;s Covered</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprint_Name__c</fullName>
        <externalId>true</externalId>
        <label>Sprint Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Weeks__c</fullName>
        <label>Weeks</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Sprint</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Weeks__c</columns>
        <columns>PUCs__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Sprint Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sprints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>